[metadata]
name=log-extractor
author=Artyom Lukianov
author_email=
description-file=README.md
license=GPLv3
home-page=https://github.com/cynepco3hahue/log-extractor/
keywords=
    log
classifier=
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Utilities
[entry_points]
console_scripts=
    log-extractor=log_extractor.extractor:run
[files]
packages =
    log_extractor
[bdist_wheel]
universal = 1
[sdist]
formats = zip
